--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Chat Application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "webpack --watch --progress --colors & nodemon server/index.js"
   },
   "keywords": [],
   "author": "Donovan Carreno",
