start building out mysql database

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "mysql": "^2.11.1",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "sequelize": "^3.24.3"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
