--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "mysql": "^2.11.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
     "sequelize": "^3.24.3"
   },
   "devDependencies": {
